tests/snapshots/html_test__html_doc_files-12.snap
---
source: tests/html_test.rs
expression: "files.get(\"search_index.js\").unwrap()"
---
(function () {
  window.DENO_DOC_SEARCH_INDEX = {"nodes":[{"kind":["class"],"name":"Bar","file":".","doc":"","location":{"filename":"default","line":8,"col":0,"byteIndex":77},"url":"././~/Bar.html","category":"","declarationKind":"export","deprecated":false},{"kind":["class"],"name":"Foo","file":".","doc":"```ts\nusing time = new FakeTime();\n```","location":{"filename":"default","line":6,"col":0,"byteIndex":56},"url":"././~/Foo.html","category":"","declarationKind":"export","deprecated":false},{"kind":["class"],"name":"Foobar","file":".","doc":"","location":{"filename":"default","line":13,"col":0,"byteIndex":175},"url":"././~/Foobar.html","category":"","declarationKind":"export","deprecated":false}]};
})()
