tests/snapshots/html_test__html_doc_files-3.snap
---
source: tests/html_test.rs
expression: "files.get(\"./~/Bar.html\").unwrap()"
---
<!DOCTYPE html>
<html>
<head>
  <title>Bar - documentation</title>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="doc-current-file" content=".">
  <link rel="stylesheet" href="..&#x2F;styles.css">
  <link rel="stylesheet" href="..&#x2F;page.css">

  <script src="..&#x2F;search_index.js" defer></script>
  <script src="..&#x2F;script.js" defer></script>
  <script src="..&#x2F;fuse.js" defer></script>
  <script src="..&#x2F;search.js" defer></script>
</head>
<body class="ddoc">
<nav class="flex lg:items-center justify-between mb-6 gap-4 max-lg:flex-col-reverse"><ul class="breadcrumbs"><li><a href="..&#x2F;" class="contextLink">index</a></li><span class="text-[#0F172A]"><svg
	width="16"
	height="16"
	viewBox="0 0 16 16"
	fill="none"
	xmlns="http://www.w3.org/2000/svg">
	<path fill-rule="evenodd" clip-rule="evenodd" d="M5.76748 11.8159C5.5378 11.577 5.54525 11.1972 5.78411 10.9675L8.93431 8L5.78411 5.0325C5.54525 4.80282 5.5378 4.423 5.76748 4.18413C5.99715 3.94527 6.37698 3.93782 6.61584 4.1675L10.2158 7.5675C10.3335 7.68062 10.4 7.83679 10.4 8C10.4 8.16321 10.3335 8.31938 10.2158 8.4325L6.61584 11.8325C6.37698 12.0622 5.99715 12.0547 5.76748 11.8159Z" fill="currentColor" />
</svg>
</span><ul><li>Bar</li></ul></ul>
<input
		type="text"
		id="searchbar"
		style="display: none;"
		class="flex-1 lg:max-w-80 py-2 px-2.5 rounded text-sm border border-gray-300 bg-transparent" />
</nav>
<div id="content"><main class="symbolGroup" id="symbol_Bar"><article>
      <div>
        <div>
          <div class="text-xl leading-none break-all">
            <span class="text-Class">class</span>&nbsp;<span class="font-bold">Bar</span>
          </div><div class="symbolSubtitle"><div>
    <span class="type"> extends </span><a class="link" href="..&#x2F;.&#x2F;.&#x2F;~&#x2F;Foo.html">Foo</a><span> </span>
  </div></div></div></div><div><div class="space-y-7" id=""></div>
</div>
    </article></main>
<div class="toc">
  <div><div class="usageContent">
    <h3>Usage</h3><div class="markdown"><pre class="highlight"><code>import { Bar } from ".";
</code><button class="context_button" data-copy="import { Bar } from &quot;.&quot;;
"><svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
<rect x="2" y="2" width="7" height="7" fill="none"></rect>
<rect x="6" y="6" width="7" height="7" fill="none"></rect>
<path d="M1.55566 2.7C1.55566 2.03726 2.09292 1.5 2.75566 1.5H8.75566C9.41841 1.5 9.95566 2.03726 9.95566 2.7V5.1H12.3557C13.0184 5.1 13.5557 5.63726 13.5557 6.3V12.3C13.5557 12.9627 13.0184 13.5 12.3557 13.5H6.35566C5.69292 13.5 5.15566 12.9627 5.15566 12.3V9.9H2.75566C2.09292 9.9 1.55566 9.36274 1.55566 8.7V2.7ZM6.35566 9.9V12.3H12.3557V6.3H9.95566V8.7C9.95566 9.36274 9.41841 9.9 8.75566 9.9H6.35566ZM8.75566 8.7V2.7H2.75566V8.7H8.75566Z" fill="#232323"></path>
</svg>
</button><code></code></pre>
</div></div></div>
</div>
<div id="searchResults"></div></div>
</body>
</html>
