tests/snapshots/html_test__html_doc_files-4.snap
---
source: tests/html_test.rs
expression: "files.get(\"./~/Bar.prototype.html\").unwrap()"
---
<meta http-equiv="refresh" content="0; url=..&#x2F;.&#x2F;.&#x2F;~&#x2F;Bar.html">
